Know who picked up the last card, bold history player names, allow x scroll for discard pile and fix spacing bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -64,6 +64,11 @@
   width: 8px;
 }
 
+.hanabi-scrollbar::-webkit-scrollbar:horizontal {
+  display: block;
+  height: 8px;
+}
+
 .hanabi-scrollbar::-webkit-scrollbar-track {
   background: #888;
 }
